Fixed Alignment

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -120,7 +120,7 @@
 
 .ig-cta {
   margin-top: 4rem;
-  padding: 0 8vw;
+  padding: 0 4.5rem;
 
   &-header {
     font-size: 2.5rem;
@@ -134,6 +134,28 @@
 }
 
 /***** MEDIA QUERIES *****/
+
+//over 2000px in width
+@media (min-width: 2000px) {
+  .ig-iframe {
+    padding: 0 12rem;
+  }
+
+  .ig-cta {
+    padding: 0 13.5rem;
+  }
+}
+
+//over 1500px in width
+@media (min-width: 1500px) {
+  .ig-iframe {
+    padding: 0 10rem;
+  }
+
+  .ig-cta {
+    padding: 0 11.5rem;
+  }
+}
 
 // over 900px in height
 @media (min-height: 900px) {
@@ -200,7 +222,9 @@
   }
 
   .ig-cta {
-    // padding: 0 4rem;
+    padding: 0;
+    margin: 0 auto;
+    text-align: center;
     margin-top: 4rem;
 
     &-header {
@@ -218,7 +242,6 @@
     background-color: $primary-color;
     height: 0.5rem;
     margin: 0;
-    margin-top: 3em;
   }
 }
 
@@ -251,7 +274,6 @@
   }
 
   .ig-cta {
-    // padding: 0 3.5rem;
     &-header {
       font-size: 2rem;
     }
